[package]
name = "rate-log"
version = "0.2.1"
edition = "2021"
description = "A Rust library for rate-limited logging that prevents spam by tracking message frequency and duration."
license = "MIT"
repository = "https://github.com/ChenhuiZhang/rate-log"
documentation = "https://docs.rs/crate/rate-log"

[dependencies]
